2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* tests/unixNotfy.test: Added cleanup of working files
	[Bug 675609]
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* doc/Tcl.n: Added headings to the eleven paragraphs, to improve
	formatting in the tools that attempt to extract tables of contents
	from the manual pages. [Bug 627455]

	* generic/tclClock.c: Expanded mutex protection around the setting
	of env(TZ) and the thread-unsafe call to tzset(). [Bug 656660]
	
2003-01-31  Don Porter  <dgp@users.sourceforge.net>

	* tests/tcltest.test: Cleaned up management of file/directory
	creation/deletion to improve "-debug 1" output.  [Bug 675614]
	The utility [slave] command failed to properly [list]-quote a
	constructed [open] command, causing failure when the pathname
	contained whitespace.  [Bug 678415]

	* tests/main.test: Stopped main.test from deleting existing file.
	Test suite should not delete files that already exist. [Bug 675660]

2003-01-28  Don Porter  <dgp@users.sourceforge.net>

	* tests/main.test: Constrain tests that do not work on Windows.
	[Bug 674387]

2003-01-28  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c: fix to setting modification date
	in TclCrossFilesystemCopy.  Also added 'panic' in 
	Tcl_FSGetFileSystemForPath under illegal calling circumstances
	which lead to hard-to-track-down bugs.
	
	* generic/tclTest.c: added test suite code to allow
	exercising a vfs-crash-on-exit bug in Tcl's finalization caused
	by the encodings being cleaned up before unloading occurs.
	* tests/fileSystem.test: added new 'knownBug' test 7.1
	to demonstrate the crash on exit.

2003-01-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tcl.h: Add TCL_PREFIX_IDENT and
	TCL_DEBUG_IDENT, used only by TclpCreateProcess.
	* unix/Makefile.in: Define TCL_DBGX.
	* win/Makefile.in: Define TCL_DBGX.
	* win/tclWinPipe.c (TclpCreateProcess):
	Check that the Tcl pipe dll actually exists