@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.test,v 1.21 2002/07/05 11:16:01 rmax Exp $
+# RCS: @(#) $Id: clock.test,v 1.22 2003/02/01 21:27:55 kennykb Exp $
 
 set env(LC_TIME) POSIX
 
@@ -51,6 +51,12 @@ test clock-2.5 {clock clicks tests, millisecond timing test} {
     # 60 msecs seems to be the max time slice under Windows 95/98
     expr {($end > $start) && (($end - $start) <= 60)}
 } {1}
+test clock-2.6 {clock clicks, milli with too much abbreviation} {
+    list [catch { clock clicks {} } msg] $msg
+} {1 {bad switch "": must be -milliseconds}}
+test clock-2.7 {clock clicks, milli with too much abbreviation} {
+    list [catch { clock clicks - } msg] $msg
+} {1 {bad switch "-": must be -milliseconds}}
 
 # clock format
 test clock-3.1 {clock format tests} {unixOnly} {
